# CSE362

./: .gitignore  CONTRIBUTING.md  README.md  agent-skills.md  flake.nix  openapi.json  pyproject.toml
Docs/: Eric.Text  Westfall.txt  erica.txt  test.txt  test2.txt
backend/: .gitignore  README.md  config.py  documentation_style.md  main.py  pyproject.toml  pytest.ini
backend/api/: __init__.py
backend/api/routes/: example.py  numbers.py  user.py
backend/app/: __init__.py  database.py  env.py  main.py  seed.py
backend/app/models/: __init__.py  booking.py  notification.py  room.py  time_slot.py  user.py
backend/app/routes/: __init__.py  auth.py  bookings.py  notifications.py  rooms.py
backend/app/schemas/: room.py  user.py
backend/app/services/: __init__.py  auth.py  avatar_service.py  booking_service.py  notification_service.py  room_service.py  user_manager.py
backend/auth/: __init__.py  password.py  session.py
backend/docs/: app.html  search.js
backend/docs/app/: database.html  main.html  models.html  routes.html  schemas.html  services.html
backend/docs/app/routes/: auth.html
backend/docs/app/schemas/: user.html
backend/docs/app/services/: auth.html  user_manager.html
backend/models/: __init__.py
backend/tests/: test_api.py  test_database.py  test_model_booking.py  test_model_notification.py  test_model_time_slot.py  test_model_user.py  test_room.py  test_route_auth.py  test_route_bookings.py  test_route_notifications.py  test_route_rooms.py  test_service_auth.py  test_service_booking.py  test_service_notification.py  test_service_room.py
(+85 files in other folders)
