[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.132.0",
    "fastapi-users>=15.0.4",
    "fastapi-users-db-sqlmodel>=0.3.0",
    "pyjwt>=2.9.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.41.0",
    "aiosqlite>=0.22.1",
    "pdoc>=16.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pdoc>=16.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
